--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "dev": "electron . --inspect"
+    "dev": "electron . --inspect",
+    "api": "node api-server.js",
+    "init-db": "sqlite3 wingman.db < tests/scenarios/api-test/schema.sql"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "electron": "^28.1.0",
+    "express": "^4.18.2",
     "sqlite3": "^5.1.7"
   },
   "directories": {
